# athena

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  opencode.json  pyproject.toml  settings.py  test.py
.zed/: debug.json
alembic/: env.py
alembic/versions/: 001_create_users.py  002_create_sessions.py  003_add_image_source.py  1445e5d841c0_add_thumbnail_columns_to_image_model.py
athena/: exceptions.py  settings.py
athena/api/: __init__.py  auth.py  images.py  sessions.py
athena/models/: __init__.py  image.py  session.py  session_item.py  session_item_image.py  user.py
athena/prompts/: summary.md
athena/routes/: __init__.py  api.py  auth.py
athena/schemas/: api.py  google.py
athena/services/: auth.py  database.py  generator.py  image.py  prompt.py  summarizer.py  thumbnail.py  upload.py
athena/static/: app.js  style.css
athena/templates/: index.html
configs/: athena.service  nginx.conf
scripts/: regenerate_thumbnails.py
templates/: index.html
tests/: conftest.py  test_api.py  test_auth.py  test_images.py  test_root.py  test_sessions.py  test_thumbnails.py
