[project]
name = "athena"
version = "1.4.1"
description = "FastAPI-based chat application with AI image generation powered by OpenRouter and Groq"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "asyncpg>=0.31.0",
    "httpx>=0.28.1",
    "pillow>=11.2.0",
    "fastapi>=0.136.1",
    "google-auth>=2.53.0",
    "ipython>=9.13.0",
    "itsdangerous>=2.2.0",
    "langchain-groq>=1.1.2",
    "langchain-core>=1.4.0",
    "openrouter>=0.9.1",
    "python-jose[cryptography]>=3.5.0",
    "pydantic-settings>=2.14.1",
    "passlib[bcrypt]>=1.7.4",
    "sqlalchemy[asyncio]>=2.0.49",
    "requests>=2.34.2",
    "uvicorn>=0.47.0",
    "asyncio>=4.0.0",
    "psycopg2-binary>=2.9.12",
]

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
    "ty>=0.0.37",
    "uv-bump>=0.5.0",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_format = "%(levelname)s %(asctime)s %(message)s"
django_find_project = true
asyncio_mode = "auto"
addopts = '-p no:warnings --color=yes'
norecursedirs = '''
.git
.github
.pytest_cache
.ruff_cache
.venv
'''

[tool.bandit]
exclude_dirs = [
    "tests/"
]
skips = ["B101", "B308", "B703"]

[tool.curlylint.rules]
indent = 2
html_has_lang = true

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"
exclude = []

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "N",  # pep8-naming
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "S",  # flake8-bandit
    "BLE",  # flake8-blind-except
    "A",  # flake8-builtins
    "DJ",  # flake8-django
    "I",  # isort
    "INP",  # flake8-no-pep420
    "RUF"  # Ruff-specific rules
]
exclude = [
    ".git",
    ".idea",
    ".vscode",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
]
ignore = [
    "DJ001", # Null values for model char fields
    "ERA001",  # Disable eradicate (commented code removal)
    # Disable Conflicting lint rules,
    # see https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E501",
    "E111",
    "E117",
    "D206",
    "D300",
    "N818",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
    "S603",
    # Disable unused `noqa` directive
    "RUF100",
    "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
    "N806",  # Variable `CONSTANT_NAME` in function should be lowercase
    "S105",  # Hardcoded password string - ignore Google OAuth URL
]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "athena", "local-folder"]
lines-after-imports = 2

[tool.ruff.lint.isort.sections]
"athena" = ["athena"]

[tool.ruff.lint.per-file-ignores]
# Ignore "E402", "F403", "F405" (import violations) in __init__.py files.
# Ignore "S" (flake8-bandit) and "N802" (function name should be lowercase) in tests and docs.
# Ignore "RUF" (Ruff-specific rules) and "I" (isort) in migrations.
"__init__.py" = ["E402", "F403", "F405"]
"**/{tests,docs}/*" = ["E402", "F403", "F405", "S", "N802", "N815"]
"**/*test*.py" = ["E402", "F403", "F405", "S", "N802"]
"**/{settings}/*" = ["E402", "F403", "F405"]
"**/migrations/*" = ["RUF", "I"]

[tool.ty.src]
exclude = [
    ".git",
    ".idea",
    ".vscode",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "alembic",
    "tests/"
]
